Added form partials and destroy method

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,22 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Home Page</title>
-</head>
+<h1> This is the home page of my blog app </h1>
 
-<body>
-  <h1>
-    Hello! This is the home page of the blog application
-  </h1>
-  <h2>
-    Links:
-    <ul>
-      <li><%= link_to 'About', about_path %></li>
-    </ul>
-  </h2>
-  <p>
-    This is a paragraph element. It has very little significance to anything at the moment, and therefore it shall stay as a silly little application
-  </p>
-</body>
-
-</html>
+<%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
