--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,13 @@
 @import "bootstrap";
+
+#logo {
+  text-transform: uppercase;
+  font-size: 1.7em;
+  font-weight: bold;
+  letter-spacing: -1px;
+}
+
+#logo:hover {
+  text-decoration: none;
+}
+
