--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,12 @@
-<h1> This is the home page of my blog app </h1>
-
-<%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <div class="row align-items-center justify-content-center mb-2">
+        <h1 class="display-4">Alpha Blog</h1>
+    </div>
+    <div class="row align-items-end justify-content-center">
+        <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg" %>
+    </div>
+  </div>
+</div>
+  
+    <%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
